--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Do not expose your Neon credentials to the browser
 
-PGHOST='ep-dry-flower-a1nc43e4.ap-southeast-1.aws.neon.tech'
-PGDATABASE='E%20learning'
-PGUSER='E%20learning_owner'
-PGPASSWORD='ky3eFhaWVu4i'
-ENDPOINT_ID='ep-dry-flower-a1nc43e4'
+PGHOST=''
+PGDATABASE=''
+PGUSER=''
+PGPASSWORD=''
+ENDPOINT_ID=''
 
-JWT_SECRET="FHSDFHSIUWIEURHWEEE09-2194238423IPO1P9CVSq"
+JWT_SECRET=""
 
-RESEND_API_KEY="re_QehWxi6h_HvWAtwh6jsY5Sj7dikKif9sb"
+RESEND_API_KEY=""
